// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeader renders PageHeader 1`] = `
<Fragment>
  <section
    className="page-header-nav-container"
  />
  <Element
    className="page-header-category-title page-header-bg-green"
    name="page-header"
  >
    <h1
      className="title"
    >
      Your Cart
    </h1>
  </Element>
</Fragment>
`;

exports[`PageHeader renders empty PageHeader 1`] = `
<Fragment>
  <section
    className="page-header-nav-container"
  />
  <section
    className="page-header-category-title page-header-bg-undefined"
  >
    <h1
      className="title"
    />
  </section>
</Fragment>
`;
